<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kmr_slam_toolbox</name>
  <version>0.0.0</version>
  <description>Implements SLAM_toolbox into the KMR system with the help of kmr_concatenator.</description>
  <maintainer email="mortenmdahl@outlook.com">morten</maintainer>
  <license>Apache Lisence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>rviz_default_plugins</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
